# odata-rust-generator

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: main.rs
tests/: folketinget.xml
