[package]
name = "odata-rust-generator"
version = "0.6.0"
authors = ["Mathias Pius <contact@pius.io>"]
keywords = ["odata", "code-generation", "opendata"]
repository = "https://github.com/Datavirke/odata-rust-generator"
description = "Generates Rust code that represents the models of an OpenData document"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odata-parser-rs = { path = "../odata-parser-rs" }
# Waiting for https://github.com/carllerche/codegen/pull/34 to be merged
codegen = { git = "https://github.com/josefrcm/codegen", rev = "21cea9c45d7726499306d732376baba44fd1813d" }
clap = "3.0.0-beta.2"
indoc = "1.0.3"