[package]
name = "odata-rust-generator"
version = "0.6.0"
authors = ["Mathias Pius <contact@pius.io>"]
keywords = ["odata", "code-generation", "opendata"]
repository = "https://github.com/Datavirke/odata-rust-generator"
description = "Generates Rust code that represents the models of an OpenData document"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odata-parser-rs = "0.1.2"
# Waiting for https://github.com/carllerche/codegen/pull/34 to be merged
codegen = { package = "codegen2", version = "0.1.4" }
clap = "3.0.0-beta.2"
indoc = "1.0.3"